fixing gap

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ header {
         flex-direction: row;
         padding: 10px;
         margin: 10px 0 10px 0;
+        gap: 20px;
 }
 .Skills {
     padding: 10px;
@@ -32,7 +33,8 @@ header {
        flex-direction: row;
        padding: 10px;
        margin: 10px 0 10px 0;
-       width: 60%;
+       
+       gap: 20px;
 }
 .Objectives {
     width: 60%;
